; ModuleID = '/home/carl/AnghaBench/sway/sway/desktop/extr_xwayland.c_handle_set_class.c'
source_filename = "/home/carl/AnghaBench/sway/sway/desktop/extr_xwayland.c_handle_set_class.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_xwayland_view = type { %struct.sway_view }
%struct.sway_view = type { %struct.wlr_xwayland_surface* }
%struct.wlr_xwayland_surface = type { i32 }
%struct.wl_listener = type { i32 }

@set_class = common dso_local global i32 0, align 4
@xwayland_view = common dso_local global %struct.sway_xwayland_view* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wl_listener*, i8*)* @handle_set_class to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @handle_set_class(%struct.wl_listener* %0, i8* %1) #0 {
  %3 = alloca %struct.wl_listener*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.sway_xwayland_view*, align 8
  %6 = alloca %struct.sway_view*, align 8
  %7 = alloca %struct.wlr_xwayland_surface*, align 8
  store %struct.wl_listener* %0, %struct.wl_listener** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load %struct.wl_listener*, %struct.wl_listener** %3, align 8
  %9 = load %struct.sway_xwayland_view*, %struct.sway_xwayland_view** %5, align 8
  %10 = ptrtoint %struct.sway_xwayland_view* %9 to i32
  %11 = load i32, i32* @set_class, align 4
  %12 = call %struct.sway_xwayland_view* @wl_container_of(%struct.wl_listener* %8, i32 %10, i32 %11)
  store %struct.sway_xwayland_view* %12, %struct.sway_xwayland_view** %5, align 8
  %13 = load %struct.sway_xwayland_view*, %struct.sway_xwayland_view** %5, align 8
  %14 = getelementptr inbounds %struct.sway_xwayland_view, %struct.sway_xwayland_view* %13, i32 0, i32 0
  store %struct.sway_view* %14, %struct.sway_view** %6, align 8
  %15 = load %struct.sway_view*, %struct.sway_view** %6, align 8
  %16 = getelementptr inbounds %struct.sway_view, %struct.sway_view* %15, i32 0, i32 0
  %17 = load %struct.wlr_xwayland_surface*, %struct.wlr_xwayland_surface** %16, align 8
  store %struct.wlr_xwayland_surface* %17, %struct.wlr_xwayland_surface** %7, align 8
  %18 = load %struct.wlr_xwayland_surface*, %struct.wlr_xwayland_surface** %7, align 8
  %19 = getelementptr inbounds %struct.wlr_xwayland_surface, %struct.wlr_xwayland_surface* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %2
  br label %26

23:                                               ; preds = %2
  %24 = load %struct.sway_view*, %struct.sway_view** %6, align 8
  %25 = call i32 @view_execute_criteria(%struct.sway_view* %24)
  br label %26

26:                                               ; preds = %23, %22
  ret void
}

declare dso_local %struct.sway_xwayland_view* @wl_container_of(%struct.wl_listener*, i32, i32) #1

declare dso_local i32 @view_execute_criteria(%struct.sway_view*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
